kubeflow-manifests/common/istio-1-24/istio-install/overlays/ingress/istio-ingressgateway-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: istio-ingressgateway
  namespace: istio-system
spec:
  type: NodePort
